<resources>
    <string name="app_name">Learn Android</string>
    <string name="home_title">Home</string>
    <string name="event_title">Message from Codi</string>
    <string name="guest_title">Guest</string>
    <string name="welcome_title">Selamat Datang!</string>
    <string name="welcome_desc">Sertakan gambar profil Anda untuk melengkapi profil</string>
    <string name="text_home">masukan nama…</string>
    <string name="button_home">Selesai</string>
    <string name="home_label">Nama : </string>
    <string name="default_name">Android</string>
    <string name="select_event_button_text">Pilih Event</string>
    <string name="select_guest_button_text">Pilih Guest</string>
    <string name="guest_desc_image">Guest Image</string>
    <string name="guest_label">Guest</string>
    <string name="event_desc_image">Event Image</string>
    <string name="event_desc">This is version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</string>
    <string name="event_label">Event</string>
    <string name="event_date">01 January 2017</string>
    <string name="title_dialog_isPalindrom">Is Palindrom?</string>
    <string name="palindrome_message">isPalindrome</string>
    <string name="not_palindrome_message">not palindrome</string>
    <string name="action_search">Search</string>
    <string name="action_add_event">New Event</string>
    <string name="event_map_image">Event Map Image</string>
</resources>
