<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_validation"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.personal.learn_android.MainActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:text="@string/welcome_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/welcome_desc"
        android:text="@string/welcome_desc"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/btn_add_photo"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/text_home"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="sendName"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:text="@string/button_home" />
</LinearLayout>
