<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/event_label" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@android:color/holo_orange_light"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/event_date" />

                <TextView
                    android:id="@+id/eventDesc"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/event_desc" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageEvent"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/events"
                android:contentDescription="@string/event_desc_image" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>